infra/kubernetes/k8s-preg/overlays/prod/ingress/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-preg
  namespace: preg-prod
  labels:
    app: preg
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: ssl-preg-ingress-rules # Load Balancer Name
    alb.ingress.kubernetes.io/scheme: internet-facing # or internal
    alb.ingress.kubernetes.io/target-type: instance
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port  
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
     ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    # Automatically disover SSL Certificate from AWS Certificate Manager Service using spec.rules.host
    # alb.ingress.kubernetes.io/certificate-arn: "${ACM_CERT_ARN}"
    # External DNS - For creating a Record Set in Route53
    external-dns.alpha.kubernetes.io/hostname: preg.paulinakimak.com
spec:
  ingressClassName: prod-preg-app-aws-ingress-class # Ingress Class
  rules:
  - host: preg.paulinakimak.com
    http:
      paths:
      - path: /baby
        pathType: Prefix
        backend:
          service:
            name: prod-preg-baby-svc
            port:
              number: 80  
      - path: /pills
        pathType: Prefix
        backend:
          service:
            name: prod-preg-pills-svc
            port:
              number: 80
      - path: /org
        pathType: Prefix
        backend:
          service:
            name: prod-preg-org-svc
            port:
              number: 80
      - path: /memo
        pathType: Prefix
        backend:
          service:
            name: prod-preg-memo-svc
            port:
              number: 80
      - path: /nutri
        pathType: Prefix
        backend:
          service:
            name: prod-preg-nutri-svc
            port:
              number: 80
      # main app
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-preg-pills-svc
            port:
              number: 80
